--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head> 
+    <link rel="stylesheet" href="style.css" />
     <title>My Website</title>
   </head>
   <body>
-      <h1>Hello World!</h1>
+      <h1 style="text-align:center;">Hello World!</h1>
+      <p style="text-align:center;">This is my site</p>
     </body>
 </html>
