--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
       <h1 style="text-align:center;">Hello World!</h1>
+      <script src="script.js"></script>
       <p style="text-align:center;">This is my site</p>
     </body>
 </html>
